FlightPath 5.x Changelog
========================

2016-03-31
  Added option to CourseList function sort_alphabetical_order, to include the degree's advising weight of the degree the course requires first, to make
  it also get sorted by degree.
  
  Changed the way semester blocks are drawn in AdvisingScreen, to group degrees together by advising weight, then name, alphabetically.
  Made similar changes to AdvisingScreenTypeView.  Also added more CSS classes to elements, making it easier to target.


2016-03-30
  Added extra class names when drawing courses and group selection rows.  Also, created new CSS class called "selection_highlight" that gets
  added and removed over certain items.  Updated theme css files to accomodate.
  

2016-03-29
  Fixed bug in what if selection screen.
  
  Cleaned up student search module a little, added extra CSS so that major codes more stylable.
  Also made student_search module PDO compliant, not relying on older mysql_real_escape_string function calls anymore.


2016-03-28
  Implemented hook for fp_get_student_majors().
  
  Added extra CSS classes to degrees in the currently advising box, making it easier to hide them through CSS. 

  Improved the fp_get_machine_readable() function, altered how form elements are rendered in render.inc so that
  elements with weird characters get safely handled.
  


2016-03-27
  Worked on What If selections screen, to work with new degree track selection configurations.
  

2016-03-20
  Fixed bug where permissions were not acting correctly in certain circumstances for viewing past advising sessions.


2016-03-17
  Added check on copy degree form to prevent accidental overwriting of existing degrees.
  

2016-03-14
  Added concept of min/max track selections to degrees.  Now, the user will be stopped if they select a number of tracks
  outside of the allowed range.
  
 
2016-03-08
  Added new permission checks to advise.module, and new permission-- limiting ability of user to only view their 