@@ -869,7 +869,8 @@ function student_search_query_advisees($sql, $params = array()) {
   $r = 0;
 
   $faculty_advisees = advise_get_advisees();
-  
+
+    
   $result = db_query($sql, $params);
   while ($cur = db_fetch_array($result))
   {
